--- a/.gitattributes
+++ b/.gitattributes
@@ -235,6 +235,7 @@ subethaedit/LayoutManager.h -text
 subethaedit/LayoutManager.m -text
 subethaedit/License.rtf -text
 subethaedit/Modes/ActionScript.mode/Contents/Info.plist -text
+subethaedit/Modes/ActionScript.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/ActionScript.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/ActionScript.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/ActionScript.mode/Contents/Resources/RegexSymbols.xml -text
@@ -245,18 +246,22 @@ subethaedit/Modes/Applescript.mode/Contents/Resources/English.lproj/Localizable.
 subethaedit/Modes/Applescript.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Applescript.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Base.mode/Contents/Info.plist -text
+subethaedit/Modes/Base.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Base.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/C++.mode/Contents/Info.plist -text
+subethaedit/Modes/C++.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/C++.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/C++.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/C++.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/C++.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/C.mode/Contents/Info.plist -text
+subethaedit/Modes/C.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/C.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/C.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/CSS.mode/Contents/Info.plist -text
+subethaedit/Modes/CSS.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/CSS.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/CSS.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/CSS.mode/Contents/Resources/RegexSymbols.xml -text
@@ -264,6 +269,7 @@ subethaedit/Modes/CSS.mode/Contents/Resources/Symbol!.png -text
 subethaedit/Modes/CSS.mode/Contents/Resources/SymbolID.png -text
 subethaedit/Modes/CSS.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Conference.mode/Contents/Info.plist -text
+subethaedit/Modes/Conference.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Conference.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Conference.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Conference.mode/Contents/Resources/RegexSymbols.xml -text
@@ -271,6 +277,7 @@ subethaedit/Modes/Conference.mode/Contents/Resources/SymbolH.png -text
 subethaedit/Modes/Conference.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Conference.mode/Contents/Resources/notes_template.notes -text
 subethaedit/Modes/HTML.mode/Contents/Info.plist -text
+subethaedit/Modes/HTML.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/HTML.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/HTML.mode/Contents/Resources/RegexSymbols.xml -text
@@ -280,38 +287,45 @@ subethaedit/Modes/HTML.mode/Contents/Resources/SymbolH.png -text
 subethaedit/Modes/HTML.mode/Contents/Resources/Symbola.png -text
 subethaedit/Modes/HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Java.mode/Contents/Info.plist -text
+subethaedit/Modes/Java.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Java.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Java.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Java.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Java.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Javascript.mode/Contents/Info.plist -text
+subethaedit/Modes/Javascript.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Javascript.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Javascript.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Javascript.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Javascript.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/LaTeX.mode/Contents/Info.plist -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/AutocompleteAdditions.txt -text
+subethaedit/Modes/LaTeX.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/LaTeX.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Lua.mode/Contents/Info.plist -text
+subethaedit/Modes/Lua.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Lua.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Lua.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Lua.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Lua.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Info.plist -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/AutocompleteAdditions.txt -text
+subethaedit/Modes/Objective-C.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Objective-C.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist -text
+subethaedit/Modes/PHP-HTML.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/PHP-HTML.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Pascal.mode/Contents/Info.plist -text
+subethaedit/Modes/Pascal.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Pascal.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Pascal.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Pascal.mode/Contents/Resources/RegexSymbols.xml -text
@@ -319,27 +333,32 @@ subethaedit/Modes/Pascal.mode/Contents/Resources/SymbolD.png -text
 subethaedit/Modes/Pascal.mode/Contents/Resources/SymbolO.png -text
 subethaedit/Modes/Pascal.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Perl.mode/Contents/Info.plist -text
+subethaedit/Modes/Perl.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Perl.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Perl.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Perl.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Perl.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Python.mode/Contents/Info.plist -text
+subethaedit/Modes/Python.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Python.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Python.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Python.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Python.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Ruby.mode/Contents/Info.plist -text
+subethaedit/Modes/Ruby.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/README.txt -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Ruby.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/SQL.mode/Contents/Info.plist -text
+subethaedit/Modes/SQL.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/SQL.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/SQL.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/SQL.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/SQL.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/XML.mode/Contents/Info.plist -text
+subethaedit/Modes/XML.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/XML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
 subethaedit/Modes/XML.mode/Contents/Resources/English.lproj/Localizable.strings -text
 subethaedit/Modes/XML.mode/Contents/Resources/RegexSymbols.xml -text
