--- a/subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist
+++ b/subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist
@@ -5,13 +5,13 @@
 	<key>CFBundleIdentifier</key>
 	<string>SEEMode.PHP-HTML</string>
 	<key>CFBundleName</key>
-	<string>Objective-C</string>
+	<string>PHP-HTML</string>
     <key>CFBundleShortVersionString</key>
-	<string>1.0</string>
+	<string>1.1</string>
 	<key>CFBundleVersion</key>
-	<string>1.0</string>
+	<string>1.1</string>
     <key>CFBundleGetInfoString</key>
-	<string>1.0, Copyright TheCodingMonkeys 2004</string>
+	<string>1.1, Copyright TheCodingMonkeys 2004</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
