Added Info.plist versioning.
* English.lproj
  Removed localization because we currently do not have localizable values.

* TCMFoundation.xcode/project.pbxproj
  Added shell script build phase which sets the Subversion revision as the 
  CFBundleVersion in the Info.plist

* Info.plist
  Moved CFBundleName from localized plist and added short version string and
  added placeholder for CFBundleVersion.

--- a/subethaedit/TCMFoundation/Info.plist
+++ b/subethaedit/TCMFoundation/Info.plist
@@ -8,6 +8,8 @@
 	<string>TCMFoundation</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
+	<key>CFBundleName</key>
+	<string>TCMFoundation</string>	
 	<key>CFBundleIdentifier</key>
 	<string>com.codingmonkeys.Foundation</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -16,8 +18,10 @@
 	<string>FMWK</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleVersion</key>
+	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>BUILD_NUMBER_PLACEHOLDER</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
