--- a/subethaedit/TCMBEEP/Info.plist
+++ b/subethaedit/TCMBEEP/Info.plist
@@ -8,6 +8,8 @@
 	<string>TCMBEEP</string>
 	<key>CFBundleIconFile</key>
 	<string></string>
+	<key>CFBundleName</key>
+	<string>TCMBEEP</string>	
 	<key>CFBundleIdentifier</key>
 	<string>com.codingmonkeys.BEEP</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -16,8 +18,10 @@
 	<string>FMWK</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
-	<key>CFBundleVersion</key>
+	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
+	<key>CFBundleVersion</key>
+	<string>BUILD_NUMBER_PLACEHOLDER</string>
 	<key>NSPrincipalClass</key>
 	<string></string>
 </dict>
