Checking in viMode prototype, so in case I don't have to start from scratch (again) if my stupidity strikes (again).

--- a/.gitattributes
+++ b/.gitattributes
@@ -796,6 +796,26 @@ tool/TCMXMLParser/TCMXMLParser_Prefix.pch -text
 tool/TCMXMLParser/expat.h -text
 tool/TCMXMLParser/libexpat.a -text
 tool/TCMXMLParser/main.m -text
+tool/VIMode/English.lproj/InfoPlist.strings -text
+tool/VIMode/English.lproj/MainMenu.nib/classes.nib -text
+tool/VIMode/English.lproj/MainMenu.nib/info.nib -text
+tool/VIMode/English.lproj/MainMenu.nib/keyedobjects.nib -text
+tool/VIMode/Info.plist -text
+tool/VIMode/TCMAnimatingWindow.h -text
+tool/VIMode/TCMAnimatingWindow.m -text
+tool/VIMode/TCMVIBezelView.h -text
+tool/VIMode/TCMVIBezelView.m -text
+tool/VIMode/TCMVIBezelWindow.h -text
+tool/VIMode/TCMVIBezelWindow.m -text
+tool/VIMode/TCMVIController.h -text
+tool/VIMode/TCMVIController.m -text
+tool/VIMode/VIMTextView.h -text
+tool/VIMode/VIMTextView.m -text
+tool/VIMode/VIMode.xcode/pittenau.mode2 -text
+tool/VIMode/VIMode.xcode/pittenau.pbxuser -text
+tool/VIMode/VIMode.xcode/project.pbxproj -text
+tool/VIMode/VIMode_Prefix.pch -text
+tool/VIMode/main.m -text
 tool/XMPP/English.lproj/InfoPlist.strings -text
 tool/XMPP/Info.plist -text
 tool/XMPP/Node.h -text
