--- a/.gitattributes
+++ b/.gitattributes
@@ -484,6 +484,7 @@ subethaedit/TCMApplication.m -text
 subethaedit/TCMBEEP/Info.plist -text
 subethaedit/TCMBEEP/TCMBEEP.h -text
 subethaedit/TCMBEEP/TCMBEEP.xcode/project.pbxproj -text
+subethaedit/TCMBEEP/TCMBEEP.xcodeproj/project.pbxproj -text
 subethaedit/TCMBEEP/TCMBEEPChannel.h -text
 subethaedit/TCMBEEP/TCMBEEPChannel.m -text
 subethaedit/TCMBEEP/TCMBEEPFrame.h -text
