--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,9 @@
 * text=auto !eol
+artwork/Bonjour[!!-~]Icons/Bonjour_16_256.tif -text
+artwork/Bonjour[!!-~]Icons/Bonjour_16_Millions.tif -text
+artwork/Bonjour[!!-~]Icons/Bonjour_24_256.tif -text
+artwork/Bonjour[!!-~]Icons/Bonjour_24_Millions.tif -text
+artwork/Bonjour[!!-~]Icons/Bonjour_32_Millions.tif -text
 artwork/LogoGreenFullSize.psd -text
 artwork/icons/Document-b3-128.psd -text
 artwork/icons/Document-b3-16.psd -text
