- added send to service so drag of text works now (localisation of service?) - fixed mark krochmal bug (windows that are created under the dock) - fixed bug where files created with "new->modename" weren't resized to the correct size   fixed the same thing when opening new empty files via see tool   (note to mbo: file encodings arent respected with new empty files created with "see")

--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -301,5 +301,25 @@
 			</dict>
 		</dict>
 	</array>
+	<key>NSServices</key>
+	<array>
+		<dict>
+			<key>NSMenuItem</key>
+			<dict>
+				<key>default</key>
+				<string>SubEthaEdit/New Document Containing Selection</string>
+			</dict>
+			<key>NSMessage</key>
+			<string>openSelection</string>
+			<key>NSPortName</key>
+			<string>SubEthaEdit</string>
+			<key>NSSendTypes</key>
+			<array>
+				<string>NSRTFDPboardType</string>
+				<string>NSRTFPboardType</string>
+				<string>NSStringPboardType</string>
+			</array>
+		</dict>
+	</array>
 </dict>
 </plist>
