--- a/.gitattributes
+++ b/.gitattributes
@@ -525,6 +525,7 @@ subethaedit/Tools/customers2vcf.pl -text
 subethaedit/Tools/filterClasses.sh -text
 subethaedit/Tools/parseCocoaEnums.pl -text
 subethaedit/Tools/parseObjCHeadersForAutocomplete.pl -text
+subethaedit/Tools/seeserver.pl -text
 subethaedit/Tools/serials/attackserial.pl -text
 subethaedit/Tools/serials/checkserial.pl -text
 subethaedit/Tools/serials/checkserial/checkserial.xcode/pittenau.pbxuser -text
