- added my homebrown diff mode

--- a/.gitattributes
+++ b/.gitattributes
@@ -288,6 +288,13 @@ subethaedit/Modes/Conference.mode/Contents/Resources/RegexSymbols.xml -text
 subethaedit/Modes/Conference.mode/Contents/Resources/SymbolH.png -text
 subethaedit/Modes/Conference.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/Conference.mode/Contents/Resources/notes_template.notes -text
+subethaedit/Modes/Diff.mode/Contents/Info.plist -text
+subethaedit/Modes/Diff.mode/Contents/Resources/ChangeLog.txt -text
+subethaedit/Modes/Diff.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
+subethaedit/Modes/Diff.mode/Contents/Resources/English.lproj/Localizable.strings -text
+subethaedit/Modes/Diff.mode/Contents/Resources/RegexSymbols.xml -text
+subethaedit/Modes/Diff.mode/Contents/Resources/SymbolID.png -text
+subethaedit/Modes/Diff.mode/Contents/Resources/SyntaxDefinition.xml -text
 subethaedit/Modes/HTML.mode/Contents/Info.plist -text
 subethaedit/Modes/HTML.mode/Contents/Resources/ChangeLog.txt -text
 subethaedit/Modes/HTML.mode/Contents/Resources/English.lproj/InfoPlist.strings -text
