- made it look like candy

--- a/.gitattributes
+++ b/.gitattributes
@@ -563,6 +563,7 @@ subethaedit/artwork/Action.tiff -text
 subethaedit/artwork/ActionPressed.tiff -text
 subethaedit/artwork/AdvancedPrefs.tiff -text
 subethaedit/artwork/Announce.tiff -text
+subethaedit/artwork/CandyBar.png -text
 subethaedit/artwork/Conceal.png -text
 subethaedit/artwork/Conceal.tiff -text
 subethaedit/artwork/DefaultPerson.tiff -text
