--- a/.gitattributes
+++ b/.gitattributes
@@ -101,6 +101,8 @@ subethaedit/AdvancedPreferences.h -text
 subethaedit/AdvancedPreferences.m -text
 subethaedit/AppController.h -text
 subethaedit/AppController.m -text
+subethaedit/BorderedTextField.h -text
+subethaedit/BorderedTextField.m -text
 subethaedit/ButtonScrollView.h -text
 subethaedit/ButtonScrollView.m -text
 subethaedit/CandyBarView.h -text
