--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -216,7 +216,7 @@
 		</dict>
 	</array>
 	<key>CFBundleExecutable</key>
-	<string>SubEthaEdit</string>
+	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleGetInfoString</key>
 	<string>SubEthaEdit 2.3, Copyright © 2003-2006, TheCodingMonkeys</string>
 	<key>CFBundleHelpBookFolder</key>
@@ -230,7 +230,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>SubEthaEdit</string>
+	<string>${PRODUCT_NAME}</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
