--- a/subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist
+++ b/subethaedit/Modes/PHP-HTML.mode/Contents/Info.plist
@@ -25,10 +25,12 @@ http://www.codingmonkeys.de</string>
 	   <string>php3</string>
 	   <string>php4</string>
 	   <string>phtml</string>
+	   <string>inc</string>
 	   <string>PHP</string>
 	   <string>PHP3</string>
 	   <string>PHP4</string>
 	   <string>PHTML</string>
+	   <string>INC</string>
 	</array>
 </dict>
 </plist>
