--- a/subethaedit/Modes/Ruby.mode/Contents/Info.plist
+++ b/subethaedit/Modes/Ruby.mode/Contents/Info.plist
@@ -11,11 +11,11 @@
 http://www.paploo.net/~paploo
 Based on the original Coding Monkey's code</string>
     <key>CFBundleShortVersionString</key>
-	<string>2.4</string>
+	<string>2.3</string>
 	<key>CFBundleVersion</key>
-	<string>2.4</string>
+	<string>2.3</string>
     <key>CFBundleGetInfoString</key>
-	<string>2.4, Copyright Jeff Reinecke 2004, based on the original Ruby mode by The Coding Monkeys.</string>
+	<string>2.3, Copyright Jeff Reinecke 2004, based on the original Ruby mode by The Coding Monkeys.</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleInfoDictionaryVersion</key>
@@ -26,10 +26,12 @@ Based on the original Coding Monkey's code</string>
 	   <string>ruby</string>
 	   <string>rbx</string>
 	   <string>rhtml</string>
+	   <string>rxml</string>
 	   <string>RB</string>
 	   <string>RUBY</string>
 	   <string>RBX</string>
 	   <string>RHTML</string>
+	   <string>RXML</string>
 	</array>
 </dict>
 </plist>
