--- a/subethaedit/Info.plist
+++ b/subethaedit/Info.plist
@@ -249,7 +249,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>BUILD_NUMBER_PLACEHOLDER</string>
+	<string>REVISION</string>
 	<key>LSMinimumSystemVersion</key>
 	<string>10.3</string>
 	<key>NSAppleScriptEnabled</key>
