* English.lproj/AboutPanel.nib   Removed the OgreKit/oniguruma information and added a small CodingMonkeys   logo at the bottom of the panel. I'm still satisfied with look of the panel.
* artwork/monkey32.png
  Added monkey logo for about panel.

* LicenseController.m
  Registration panel is now filled with information from preferences. It falls
  back to the address book if there's nothing in the prefs.

* AppController.m
  You can now always change your serial number or buy new licenses via the
  app menu.

* SubEthaEdit.xcodeproj
  Added the -traditional flag for the Info.plist preprocessing to avoid the
  whitespace which was added by the precompiler at the head of Info.plist. This
  workaround was suggested by the Xcode release notes but it doesn't seem to
  work.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1108,6 +1108,7 @@ subethaedit/artwork/WaitPipe.png -text
 subethaedit/artwork/WebReload.tiff -text
 subethaedit/artwork/codingmonkeys.png -text
 subethaedit/artwork/debug.tiff -text
+subethaedit/artwork/monkey32.png -text
 subethaedit/artwork/myriad.png -text
 subethaedit/artwork/style.icns -text
 subethaedit/createDiskImage.sh -text
