* NSStringSEEAdditions.m   Increased number of possible isValidSerial calls to 100.
* TCMMillionMonkeys/TCMMMPresenceManager.[hm]
  Removed unused string.

* LicenseController.m
  Validating license in registration panel only when serial is 18 chars long.

* AboutPanelController.m
  Showing credits from file Credits.rtfd.

* English.lproj/Credits.rtfd
  Added new file.

* InternetBrowserController.m
  Removed commented code.

--- a/.gitattributes
+++ b/.gitattributes
@@ -147,6 +147,8 @@ subethaedit/English.lproj/AboutPanel.nib/keyedobjects.nib -text
 subethaedit/English.lproj/AdvancedPrefs.nib/classes.nib -text
 subethaedit/English.lproj/AdvancedPrefs.nib/info.nib -text
 subethaedit/English.lproj/AdvancedPrefs.nib/keyedobjects.nib -text
+subethaedit/English.lproj/Credits.rtfd/TXT.rtf -text
+subethaedit/English.lproj/Credits.rtfd/monkey32.png -text
 subethaedit/English.lproj/DocumentProxy.nib/classes.nib -text
 subethaedit/English.lproj/DocumentProxy.nib/info.nib -text
 subethaedit/English.lproj/DocumentProxy.nib/keyedobjects.nib -text
