Finally fixed SEE-156: Syntax Definition assignment accessible through statusbar - the encoding popupbutton in the bottom now flips back to the actual encoding when "Customize Encoding List..." is selected - the encoding popupbutton stays correct when reintepretation or conversion fails - the encoding popupbutton stays correct when the encoding list changes - the distances in the upper status bar are correct again (was to high and to much on the left side when waiting for a pipe out

--- a/.gitattributes
+++ b/.gitattributes
@@ -246,6 +246,8 @@ subethaedit/HueToColorValueTransformer.m -text
 subethaedit/ImagePopUpButtonCell.h -text
 subethaedit/ImagePopUpButtonCell.m -text
 subethaedit/Info.plist -text
+subethaedit/InsetTextFieldCell.h -text
+subethaedit/InsetTextFieldCell.m -text
 subethaedit/InternetBrowserController.h -text
 subethaedit/InternetBrowserController.m -text
 subethaedit/Invitation.aiff -text
