--- a/subethaedit/Modes/C++.mode/Contents/Info.plist
+++ b/subethaedit/Modes/C++.mode/Contents/Info.plist
@@ -25,12 +25,14 @@ http://www.codingmonkeys.de</string>
 	   <string>c++</string>
 	   <string>cp</string>
 	   <string>cxx</string>
+	   <string>hxx</string>
 	   <string>C</string>
 	   <string>cc</string>
 	   <string>CPP</string>
 	   <string>C++</string>
 	   <string>CP</string>
 	   <string>CXX</string>
+	   <string>HXX</string>
 	   <string>CC</string>
 	</array>
 </dict>
