--- a/.gitattributes
+++ b/.gitattributes
@@ -69,10 +69,17 @@ artwork/mockups/RendezvousBrowser2.psd -text
 artwork/website/Autocomplete.psd -text
 artwork/website/BigPicture.de.psd -text
 artwork/website/BigPicture.psd -text
+artwork/website/CollabKubrick.psd -text
 artwork/website/HellasInternational.psd -text
 artwork/website/ModeFiles.psd -text
 artwork/website/Printing.psd -text
 artwork/website/RendezvousBrowser.psd -text
+artwork/website/ShotsPure/Picture[!!-~]1.png -text
+artwork/website/ShotsPure/Picture[!!-~]4.png -text
+artwork/website/ShotsPure/Picture[!!-~]5.png -text
+artwork/website/ShotsPure/Picture[!!-~]6.png -text
+artwork/website/ShotsPure/Picture[!!-~]7.png -text
+artwork/website/ShotsPure/Shot1.tiff -text
 artwork/website/StylePrefs.psd -text
 artwork/website/SubEthaEditImage.psd -text
 artwork/website/TolleProgramme.psd -text
