Moved contents of trunk/subethaedit/Tools to trunk/tool because the folder doesn't contain anything required to build SubEthaEdit.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1128,27 +1128,6 @@ subethaedit/TextView.h -text
 subethaedit/TextView.m -text
 subethaedit/TexturedButtonCell.h -text
 subethaedit/TexturedButtonCell.m -text
-subethaedit/Tools/HTMLTemplate.html -text
-subethaedit/Tools/LaTeXTemplate.latex -text
-subethaedit/Tools/RTFTemplate.rtf -text
-subethaedit/Tools/autodoc -text
-subethaedit/Tools/convertcolor.pl -text
-subethaedit/Tools/customers2vcf.pl -text
-subethaedit/Tools/filterClasses.sh -text
-subethaedit/Tools/parseCocoaEnums.pl -text
-subethaedit/Tools/parseObjCHeadersForAutocomplete.pl -text
-subethaedit/Tools/seeserver.pl -text
-subethaedit/Tools/serials/attackserial.pl -text
-subethaedit/Tools/serials/checkserial.pl -text
-subethaedit/Tools/serials/checkserial/checkserial.xcode/pittenau.pbxuser -text
-subethaedit/Tools/serials/checkserial/checkserial.xcode/project.pbxproj -text
-subethaedit/Tools/serials/checkserial/checkserial_Prefix.pch -text
-subethaedit/Tools/serials/checkserial/main.m -text
-subethaedit/Tools/serials/direct.txt -text
-subethaedit/Tools/serials/donations.txt -text
-subethaedit/Tools/serials/makeserial.pl -text
-subethaedit/Tools/serials/serials1.txt -text
-subethaedit/Tools/serials/serials2.txt -text
 subethaedit/URLDataProtocol.h -text
 subethaedit/URLDataProtocol.m -text
 subethaedit/URLImageView.h -text
@@ -1314,6 +1293,9 @@ tool/ExpatSimple/ExpatSimple_Prefix.pch -text
 tool/ExpatSimple/expat.h -text
 tool/ExpatSimple/libexpat.a -text
 tool/ExpatSimple/main.m -text
+tool/HTMLTemplate.html -text
+tool/LaTeXTemplate.latex -text
+tool/RTFTemplate.rtf -text
 tool/RendezCon/Add.tiff -text
 tool/RendezCon/Add_Pressed.tiff -text
 tool/RendezCon/AvailableServicesController.h -text
@@ -1474,6 +1456,24 @@ tool/addressbookkiller/addressbookkiller.xcode/administrator.mode1 -text
 tool/addressbookkiller/addressbookkiller.xcode/administrator.pbxuser -text
 tool/addressbookkiller/addressbookkiller.xcode/project.pbxproj -text
 tool/addressbookkiller/addressbookkiller_Prefix.pch -text
+tool/autodoc -text
+tool/convertcolor.pl -text
+tool/customers2vcf.pl -text
+tool/filterClasses.sh -text
+tool/parseCocoaEnums.pl -text
+tool/parseObjCHeadersForAutocomplete.pl -text
+tool/seeserver.pl -text
+tool/serials/attackserial.pl -text
+tool/serials/checkserial.pl -text
+tool/serials/checkserial/checkserial.xcode/pittenau.pbxuser -text
+tool/serials/checkserial/checkserial.xcode/project.pbxproj -text
+tool/serials/checkserial/checkserial_Prefix.pch -text
+tool/serials/checkserial/main.m -text
+tool/serials/direct.txt -text
+tool/serials/donations.txt -text
+tool/serials/makeserial.pl -text
+tool/serials/serials1.txt -text
+tool/serials/serials2.txt -text
 tool/xmpp-cli/Controller.h -text
 tool/xmpp-cli/Controller.m -text
 tool/xmpp-cli/main.m -text
